yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dockerizer-web
  namespace: aipub
  labels:
    app.kubernetes.io/name: dockerizer-web
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: dockerizer-web
